[tool.poetry]
name = "encryption-http-demo"
version = "0.1.0"
description = ""
authors = ["YogiLiu <YogiLiu@outlook.com>"]
readme = "README.md"
packages = [{include = "encryption_http_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.26.1"
cryptography = "^40.0.2"


[tool.poetry.group.dev.dependencies]
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
